--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -18,8 +18,8 @@
   display: flex;
   flex-flow: row nowrap;
   flex: 1 1 auto;
+  bottom: 0;
   width: 100%;
-  height: 40px;
   align-items: center;
   justify-content: space-around;
   padding: 0px 16px;
