Fixed some small things

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -69,4 +69,15 @@
   }
 }
 
+.btn-sign-up {
+  width: 80%;
+  margin: 0 auto;
+  font-weight: bold;
+}
+
+.btn-log-out {
+  margin: 0 auto;
+  color: $font-gray;
+  text-decoration: underline;
+}
 
