--- a/app/views/staff/reservations/_requests.html.erb
+++ b/app/views/staff/reservations/_requests.html.erb
@@ -1,22 +1,22 @@
 <%# Requests / Time Requests, ordered by :updated_at (i think) %>
 <% if all_requests.length.zero? %>
   <div class="w-100 d-flex align-items-center justify-content-center" style="height: 200px;">
-    <p style="font-color: grey">No Requests!</p>
+    <p style="font-color: black">No Requests!</p>
   </div>
 <% end %>
 
 <% all_requests.each do |request| %>
-  
+
   <%# TIME REQUEST CARD: %>
   <% if request.class == TimeRequest %>
-    
+
     <div class="request-card" id="time-request-<%= request.id %>">
-      
+
       <%# Red border for if the card is on hold (styling is up to your disgression) %>
       <div class="request-card-content"  style="<%= 'border: 2px dotted red;' if request.status == 'hold' %>">
         <%# If request is check-in, displays "early check in" otherwise "late check out" %>
         <strong><p class="mb-0"><%= request.check_in ? 'Early Check-In:' : 'Late Check-Out:' %></p></strong>
-        
+
         <%# Checks if a request is a check-in request: If so, displays check-in date. %>
         <p class="request-card-date">
           <% if request.check_in %>
@@ -47,9 +47,9 @@
                   <%= a.hidden_field :departure_time, value: request.time %>
                 <% end %>
               <% end %>
-            <%= f.submit 'Accept', class: 'btn btn-success flex-grow-1' %>
+            <%= f.submit 'Accept', class: 'btn btn-warning flex-grow-1' %>
           <% end %>
-          
+
           <%# time request decline button %>
           <%= form_for request, url: reservation_time_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'declined' %>
@@ -68,7 +68,7 @@
       <% else %>
 
         <%# Displays a Disabled button once a choice is made (time request is 'accepted/declined') %>
-        <div class="w-100 disabled btn btn-<%= request.status == 'accepted' ? 'success' : 'primary' %>">
+        <div class="w-100 disabled btn btn-<%= request.status == 'accepted' ? 'warning' : 'primary' %>">
           <%= request.status == 'accepted' ? 'Accepted' : 'Declined' %>
         </div>
       <% end %>
@@ -90,18 +90,18 @@
       </div>
 
       <div class="request-card-buttons">
-      
+
         <% if request.status == "pending" || request.status == "hold" %>
           <%= form_for request, url: reservation_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'accepted' %>
-            <%= f.submit 'Accept', class: 'btn btn-success flex-grow-1' %>
+            <%= f.submit 'Accept', class: 'btn btn-warning flex-grow-1' %>
           <% end %>
 
           <%= form_for request, url: reservation_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'declined' %>
             <%= f.submit 'Decline', class: 'btn btn-primary flex-grow-1' %>
           <% end %>
-          
+
           <% unless request.status == "hold" %>
             <%= form_for request, url: reservation_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
               <%= f.hidden_field :status, value: 'hold' %>
@@ -110,9 +110,9 @@
           <% end %>
 
         <% else %>
-        
+
           <%# Disabled if request is accepted/declined.%>
-          <div class="w-100 disabled btn btn-<%= request.status == 'accepted' ? 'success' : 'primary' %>">
+          <div class="w-100 disabled btn btn-<%= request.status == 'accepted' ? 'warning' : 'primary' %>">
             <%= request.status == 'accepted' ? 'Accepted' : 'Declined' %>
           </div>
 
