--- a/app/views/reservations/_title_down_arrows.html.erb
+++ b/app/views/reservations/_title_down_arrows.html.erb
@@ -1,12 +1,10 @@
 <div class="container-fluid d-flex flex-column mb-1 align-items-center">
-  <h2 class="mb-0 font-bright-pink"><%= text %></h2>
-  <%# if false %>
-    <div class="d-flex align-items-center justify-content-center arrows">
-      <%= image_tag("icons/down-arrow.svg", height:25) %>
-      <%= image_tag("icons/down-arrow.svg", height:25) %>
-      <%= image_tag("icons/down-arrow.svg", height:25) %>
-      <%= image_tag("icons/down-arrow.svg", height:25) %>
-      <%= image_tag("icons/down-arrow.svg", height:25) %>
-    </div>
-  <%# end %>
+  <h2 class="mb-0 font-bright-pink align-self-center text-center"><%= text %></h2>
+  <div class="d-flex align-items-center justify-content-center mt-2 arrows">
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+    <%= image_tag("icons/down-arrow.svg", height:25) %>
+  </div>
 </div>
