--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,23 +8,23 @@
   <div class="card-home mt-3">
     <div class="d-flex justify-content-center mb-3">
       <div class="d-flex flex-column text-center align-items-center">
-        <%= image_tag("checkin_l", style: "width: 90px; height: 80px; margin-right: 10px; margin-bottom: 5px;") %>
+        <%= image_tag("checkin_l.png", style: "width: 90px; height: 80px; margin-right: 10px; margin-bottom: 5px;") %>
         <p class="thick">Check-in Early</p>
       </div>
 
       <div class="d-flex flex-column text-center align-items-center left-item">
-        <%= image_tag("boss_l", style: "width: 90px; height: 80px; margin-right: 10px; margin-bottom: 5px;") %>
+        <%= image_tag("boss_l.png", style: "width: 90px; height: 80px; margin-right: 10px; margin-bottom: 5px;") %>
           <p class="thick">Request Amenities</p>
       </div>
     </div>
     <div class="d-flex justify-content-center">
       <div class="d-flex flex-column text-center align-items-center">
-        <%= image_tag("discover_l", style: "width: 90px; height: 85px; margin-right: 10px; margin-bottom: 5px;") %>
+        <%= image_tag("discover_l.png", style: "width: 90px; height: 85px; margin-right: 10px; margin-bottom: 5px;") %>
         <p class="thick">Discover Gems</p>
       </div>
 
       <div class="d-flex flex-column text-center align-items-center left-item">
-        <%= image_tag("buddy_l", style: "width:90px; height: 80px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;") %>
+        <%= image_tag("buddy_l.png", style: "width:90px; height: 80px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;") %>
         <p class="thick">Find Travel Buddies</p>
       </div>
     </div>
