buddy image suffix added

--- a/app/views/reservations/_buddy.html.erb
+++ b/app/views/reservations/_buddy.html.erb
@@ -1,6 +1,6 @@
 <div class="card-show-page">
   <h5 class="font-green text-center justify-content-center"><strong>More Delicious Together</strong></h5>
-  <%= image_tag("buddy_l", class: "card-buddy mb-2 ml-3") %>
+  <%= image_tag("buddy_l.png", class: "card-buddy mb-2 ml-3") %>
 
   <p>You can participate / orgainize dining out or cooking sessions with other guests staying at Section L.</p>
   <p>Like-minded buddies can make your trip more fun. What are you waiting for?</p>
