interesting.. check the schema please

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,7 +1,8 @@
 .box .row.header {
   flex: 0 1 auto;
   display: flex;
-  min-height: 14vh;
+  max-height: 10vh;
+  min-height: 10vh;
   justify-content: center;
   align-items: center;
 }
