--- a/app/views/staff/reservations/_detail_overview.html.erb
+++ b/app/views/staff/reservations/_detail_overview.html.erb
@@ -1,32 +1,71 @@
-<div class="font-grey mb-3">
-  <div class="card-show-page card-reservation-time d-flex">
-    <div class="border-right pr-0" style="flex: 0 0 50%">
-      <p class="font-green mb-0">Check in: </p>
-      <p class="mb-0" style="font-size: 3vh"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
-      <p class="m-0" style="font-size: 3vh"><%= (reservation.arrival_time + 9.hours).strftime("%l:%M%p~") %></p>
+<% if false %>
+  <div class="font-grey mb-3">
+    <div class="card-show-page card-reservation-time d-flex">
+      <div class="border-right pr-0" style="flex: 0 0 50%">
+        <p class="font-green mb-0">Check in: </p>
+        <p class="mb-0" style="font-size: 3vh"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
+        <p class="m-0" style="font-size: 3vh"><%= (reservation.arrival_time + 9.hours).strftime("%l:%M%p~") %></p>
+      </div>
+
+      <div class="ml-3" style="flex: 0 0 50%">
+        <p class="font-green mb-0">Check out: </p>
+        <p class="m-0" style="font-size: 3vh"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
+        <p class="m-0" style="font-size: 3vh" ><%= reservation.check_out_date.strftime("~#{(reservation.departure_time + 9.hours).strftime("%l:%M%p")}") %></p>
+      </div>
     </div>
 
-    <div class="ml-3" style="flex: 0 0 50%">
+    <div class="card-show-page mt-3">
+      <p class="font-green mb-0">Full Name:</p>
+      <p class="mb-0"> <%= @reservation.user.first_name %> <%= @reservation.user.last_name %></p>
+      <p class="font-green mb-0">Location:</p>
+      <p class="mb-0"> <%= reservation.hotel.name %> </p>
+      <p class="font-green mb-0">Room Number:</p>
+      <p class="mb-0"> <%= reservation.room_number %></p>
+      <p class="font-green mb-0">Purpose: </p>
+      <p class="mb-0"> <%= reservation.purpose %></p>
+      <p class="font-green mb-0">Group Size: </p>
+      <p class="mb-0"> <%= reservation.number_of_guests %></p>
+      <p class="font-green mb-0">Channel: </p>
+      <p class="mb-0"> <%= reservation.channel %></p>
+      <p class="font-green mb-0">Reservation Number: </p>
+      <p class="mb-0"> <%= reservation.reservation_number %></p>
+    </div>
+  </div>
+<% end %>
+
+
+<div class="container-fluid d-flex p-0">
+  <div class="font-grey card-show-page card-reservation-time" style="width: 25%; min-width: 320px; padding: 8px; margin-bottom: 8px; margin-right: 8px;">
+    <div class="border-right" style="flex: 0 0 50%; padding: 8px;">
+      <p class="font-green mb-0">Check in: </p>
+      <p class="mb-0" style="font-size: 1.3em"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
+      <p class="m-0" style="font-size: 1.3em"><%= (reservation.arrival_time + 9.hours).strftime("%l:%M%p") %></p>
+    </div>
+
+    <div class="" style="flex: 0 0 50%; padding: 8px;">
       <p class="font-green mb-0">Check out: </p>
-      <p class="m-0" style="font-size: 3vh"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
-      <p class="m-0" style="font-size: 3vh" ><%= reservation.check_out_date.strftime("~#{(reservation.departure_time + 9.hours).strftime("%l:%M%p")}") %></p>
+      <p class="m-0" style="font-size: 1.3em"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
+      <p class="m-0" style="font-size: 1.3em" ><%= reservation.check_out_date.strftime("#{(reservation.departure_time + 9.hours).strftime("%l:%M%p")}") %></p>
     </div>
   </div>
 
-  <div class="card-show-page mt-3">
-    <p class="font-green mb-0">Full Name:</p>
-    <p class="mb-0"> <%= @reservation.user.first_name %> <%= @reservation.user.last_name %></p>
-    <p class="font-green mb-0">Location:</p>
-    <p class="mb-0"> <%= reservation.hotel.name %> </p>
-    <p class="font-green mb-0">Room Number:</p>
-    <p class="mb-0"> <%= reservation.room_number %></p>
-    <p class="font-green mb-0">Purpose: </p>
-    <p class="mb-0"> <%= reservation.purpose %></p>
-    <p class="font-green mb-0">Group Size: </p>
-    <p class="mb-0"> <%= reservation.number_of_guests %></p>
-    <p class="font-green mb-0">Channel: </p>
-    <p class="mb-0"> <%= reservation.channel %></p>
-    <p class="font-green mb-0">Reservation Number: </p>
-    <p class="mb-0"> <%= reservation.reservation_number %></p>
+  <div class="card-show-page d-flex" style="padding: 8px; margin-bottom: 8px; min-width: 520px;">
+    <div style="flex: 1 1 33%; display: flex; flex-direction: column; justify-content: space-between; margin-right: 2px; min-width: 172px;">
+      <p class="font-green mb-0">Full Name:</p>
+      <p class="mb-0"> <%= @reservation.user.first_name %> <%= @reservation.user.last_name %></p>
+      <p class="font-green mb-0">Location:</p>
+      <p class="mb-0"> <%= reservation.hotel.name %> </p>
+    </div>
+    <div style="flex: 1 1 33%; display: flex; flex-direction: column; justify-content: space-between;  margin-right: 2px; min-width: 172px;">
+      <p class="mb-0"><span class="font-green">Room Number:</span> <%= reservation.room_number %></p>
+      <p class="mb-0"><span class="font-green">Purpose:</span> <%= reservation.purpose %></p>
+      <p class="mb-0"><span class="font-green">Group Size:</span> <%= reservation.number_of_guests %></p>
+    </div>
+    <div style="flex: 1 1 33%; display: flex; flex-direction: column; justify-content: space-between;  margin-right: 2px; min-width: 172px;">
+      <p class="font-green mb-0">Channel: </p>
+      <p class="mb-0"> <%= reservation.channel %></p>
+      <p class="font-green mb-0">Reservation Number: </p>
+      <p class="mb-0"> <%= reservation.reservation_number %></p>
+    </div>
   </div>
 </div>
