--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -4,7 +4,7 @@
   }
 
   input[type=radio]:hover + label {
-    background-color: lightgrey;
+    border: 1px solid blue;
     transition: background-color 0.2s;
     transition-timing-function: ease-out;
   }
@@ -28,7 +28,6 @@
     vertical-align: middle;
     cursor: pointer;
     background-color: white;
-      border: 1px solid #B27C7E;
     margin-bottom: 4px;
     display: flex;
     align-items: center;
