--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,29 +1,28 @@
-<div class="d-flex">
-  <div class="side-bar">
-    <%= link_to dashboard_path(tab: 'hosting'), class: "side-link #{'active' if params[:tab] == "hosting"}" do %>
-      <%= image_tag "event-confirm@4x.png", class: "side-link-icon" %>
-      <p class="mb-0 text-decoration-none">hosting</p>
-    <% end %>
-    <%= link_to dashboard_path(tab: 'accepted'), class: "side-link #{'active' if params[:tab] == 'accepted'}" do %>
-      <%= image_tag "ticket@4x.png", class: "side-link-icon" %>
-      <p class="mb-0 text-decoration-none">accepted</p>
-    <% end %>
-    <%= link_to dashboard_path(tab: 'pending'), class: "side-link #{'active' if params[:tab].nil? || params[:tab] == 'pending'}" do %>
-      <%= image_tag "hourglass@4x.png", class: "side-link-icon" %>
-      <p class="mb-0 text-decoration-none">pending</p>
-    <% end %>
-  </div>
+<a href="javascript:history.back()"><%= image_tag 'icons/back-arrow.svg', class: 'back-button' %></a>
+<div class="container">
 
-  <div class="container container-events-tab">
-    <% if params[:tab] == "hosting" %>
-      <h1 class="title-green">Hosting</h1>
+  <div class="tab-content" id="pills-tabContent">
+    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
       <%= render "users/events", events: @hosting %>
-    <% elsif params[:tab] == "accepted" %>
-      <h1 class="title-green">Attending</h1>
+    </div>
+    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
       <%= render "users/events", events: @accepted %>
-    <% elsif params[:tab] == "pending" || params[:tab].nil? %>
-      <h1 class="title-green">Pending requests</h1>
+    </div>
+    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
       <%= render "users/events", events: @pending %>
-    <% end %>
+    </div>
   </div>
 </div>
+
+<ul class="nav nav-pills nav-fill button-selected bottom-sticky reservation-sticky-buttons" id="pills-tab" role="tablist">
+  <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link active px-1 p-1" style="font-size:8px" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><%= image_tag "event-confirm@4x.png", height:25, class:"icon-white" %><br>Hosting</a>
+  </li>
+  <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"><%= image_tag "ticket@4x.png", height:25, class:"icon-white" %><br>Accepted</a>
+  </li>
+  <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+    <a class="nav-link px-1 p-1" style="font-size:8px"　id="p px-1ills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false"><%= image_tag "hourglass@4x.png", height:25, class:"icon-white" %><br>Pending</a>
+  </li>
+</ul>
+
