navbar and footer and sizing changes for home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,16 +30,7 @@ body {
 
 .box .row.content {
   flex: 1 1 auto;
-  height: calc(100% - 14vh);
+  height: calc(100vh - 10vh);
+  overflow: scroll;
 }
 
-.box .row.footer {
-  flex: 0 1 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  ul {
-    list-style: none;
-    display: flex;
-  }
-}
