--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,15 @@
-<div class="row footer">
-  <ul>
-    <li>Aki</li>
-    <li>Aki</li>
-    <li>Aki</li>
-  </ul>
+<div class="row footer concierge-footer">
+  <div class="concierge-footer-content">
+    <a href="https://www.instagram.com/staysection_l/">
+      <i class="fab fa-instagram lighten-color"></i>
+    </a>
+
+    <%= link_to root_path do %>
+      <%= image_tag 'logo.png', class: 'logo-extra-small', style: "width: 20px;" %>
+    <% end %>
+
+    <a href="https://www.google.com/maps/place/Section+L:+Ginza+East/@35.6733286,139.7743046,17.8z/data=!4m8!3m7!1s0x60188926b95b9e53:0x55deaf6e64b8febd!5m2!4m1!1i2!8m2!3d35.6732544!4d139.7755869?shorturl=1">
+      <i class="fas fa-map-marked-alt lighten-color"></i>
+    </a>
+  </div>
 </div>
