amenity fixes after category change

--- a/app/assets/stylesheets/components/_slide.scss
+++ b/app/assets/stylesheets/components/_slide.scss
@@ -3,9 +3,9 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 100%;
-  padding-right: 16px;
-  padding-left: 16px;
+  width: 75%;
+  padding: 8px 0 0 0;
+  margin: 0 auto;
   p {
     text-align: center;
     line-height: 1.2em;
