--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -5,10 +5,11 @@
   min-height: 10vh;
   justify-content: center;
   align-items: center;
+  padding: 8px 0;
 }
 
 .box .row.header img {
-  width: 6vh;
+  width: 2.2em;
   object-fit: cover;
 
   filter: invert(0);
