--- a/app/views/hotel_amenities/_swiper_slide.html.erb
+++ b/app/views/hotel_amenities/_swiper_slide.html.erb
@@ -14,13 +14,13 @@
 
   <div class="swiper-content h-100">
     <% hotel_amenities.each do |hotel_amenity| %>
-      <% if hotel_amenity.category == 'Additional Items' %>
+      <% if hotel_amenity.amenity.category == 'Additional Items' %>
       
-          <div id='amenity-<%= hotel_amenity.id %>' class="w-75" style="height: 10vh;">
+          <div id='amenity-<%= hotel_amenity.id %>' class="w-75 mb-1" style="height: 10vh;">
             <%= form_tag reservation_requests_path, method: :post, remote: true do %>
               <%= hidden_field_tag :hotel_amenity_id, hotel_amenity.id %>
               
-              <%= button_tag(:submit, data: { confirm: "Are you sure you wish to request #{hotel_amenity.amenity.name}?" }, class: "amenity-list-item py-3 btn btn-primary swiper-amenity-button") do %>
+              <%= button_tag(:submit, data: { confirm: "Are you sure you wish to request #{hotel_amenity.amenity.name}?" }, class: "amenity-list-item py-3 btn swiper-amenity-button") do %>
                   <%= image_tag("icons/#{hotel_amenity.amenity.name.gsub(' ', '_').gsub('/', ':').downcase}.svg", class: "hotel-amenity-icon") %>
                   <p class="mb-0" style="line-height: 1em;"><%= hotel_amenity.amenity.name %></p>
                   <div>
