--- a/app/views/hotel_amenities/index.html.erb
+++ b/app/views/hotel_amenities/index.html.erb
@@ -5,7 +5,7 @@
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <%= render 'hotel_amenities/swiper_slide', { text: @requestables.first.amenity.category, hotel_amenities: @requestables, description: 'Order additional items for your stay. (Charges may apply)' } %>
+    <%= render 'hotel_amenities/swiper_slide', { text: @additional_items.first.amenity.category, hotel_amenities: @additional_items, description: 'Order additional items for your stay. (Charges may apply)' } %>
     
     <%= render 'hotel_amenities/swiper_slide', { text: @essentials.first.amenity.category, hotel_amenities: @essentials, description: 'Things you couldn\'t go without. Find them in your room or request extra.' } %>
 
