added "seen" attribute and changed sorting in staff/reservations index to reflect seen status.

--- a/app/assets/stylesheets/components/_reservation_card.scss
+++ b/app/assets/stylesheets/components/_reservation_card.scss
@@ -13,7 +13,7 @@
 .staff-reservation-card-date {
   margin-bottom: 0;
   color: black;
-  font-size: 2vw;
+  font-size: 1em;
 }
 
 .reservation-card-alert {
