--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -8,18 +8,13 @@
   }
 </style>
 
+<%# When loading the page, the reservation's changes are now "seen", which changes the index display. %>
+<% @reservation.update(seen: true) unless @reservation.seen? %>
+
 <%= render 'shared/back', path: "staff_reservations_path" %>
 
 <div class="container-fluid">
   <%= render 'detail_overview', reservation: @reservation, style: 'position: sticky; top: auto;' %>
-
-  <% if false %>
-    <%= render 'reservations/title_down_arrows', text: "#{@reservation.user.first_name}'s Room" %>
-
-    <% room_type = (@reservation.room_number % 10).to_s %>
-    
-  <% end %>
-  <%#= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1")  %>
 
   <div class="grid-container">
     <div class="grid-element" style="overflow: scrolll;">
@@ -29,29 +24,4 @@
       <%= render 'shared/chat', reservation: @reservation, message: @message %>
     </div>
   </div>
-
-  <% if false %>
-    <ul class="d-flex justify-content-around nav nav-pills nav-fill mb-3 mt-3 button-selected" id="pills-tab" role="tablist">
-      <li class="nav-item mr-2" role="presentation">
-        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Request</a>
-      </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Chat</a>
-      </li>
-      <li class="nav-item ml-2" role="presentation">
-        <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Details</a>
-      </li>
-    </ul>
-
-    <div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-      <%= render 'requests', reservation: @reservation, all_requests: @all_requests %>
-    </div>
-    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-      <%= render 'shared/chat', reservation: @reservation, message: @message %>
-    </div>
-    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-      <%= render 'detail_overview', reservation: @reservation %>
-    </div>
-  <% end %>
  </div>
