--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -1,8 +1,8 @@
-<div class="container-fluid p-3 font-grey rounded" style="background-color: white; border: 1px solid lightgrey;">
+<div class="chat-container">
 
-    <div id="messages" class="d-flex flex-column" style="overflow-y: scroll; max-height: 40vh; min-height: 31vh;" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
+    <div id="messages" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
       <% reservation.messages.each do |message| %>
-        <div class="message-container card rounded p-2 mb-1 w-75 <%= 'align-self-end' if message.user == current_user %>" id="message-<%= message.id %>">
+        <div class="message-container <%= message.user == current_user ? 'message-container-self' : 'message-container-buddy'%>" id="message-<%= message.id %>">
           <div class="message-content">
             <p class="mb-1"><em><small><%= "#{message.user.first_name } - " %></small> <small><%= time_ago_in_words(message.created_at) %> ago</small></em></p>
             <p class="mb-1"><%= message.content %></p>
@@ -11,7 +11,7 @@
       <% end %>
 
       <div class="d-none" data-role="message-template" >
-        <div class="message-container card p-2 mb-1 w-75" id="id">
+        <div class="message-container" id="id">
           <div class="message-content">
             <p class="mb-1"><em><small data-role="message-user"></small> - <small data-role="message-date"></small><small> ago</small></em></p>
             <p class="mb-1" data-role="message-text"></p>
