--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -14,7 +14,10 @@
   flex-direction: column;
   overflow-y: scroll;
   max-height: 60vh;
-  min-height: 60vh;
+  min-height: 60vh; 
+  border: 1px solid lightgrey;
+  margin-bottom: 2px;
+  padding: 4px 2px;
 }
 
 .message-container {
@@ -40,4 +43,12 @@
 .grid-element {
   background-color: white;
   border-radius: 8px;
+}
+
+.tab-pane .chat-container {
+  padding-bottom: 0;
+  #messages {
+    min-height: 57vh;
+    max-height: 57vh;
+  }
 }
