--- a/app/assets/stylesheets/components/_request_card.scss
+++ b/app/assets/stylesheets/components/_request_card.scss
@@ -17,7 +17,7 @@
 .request-card-date {
   margin-bottom: 8px;
   vertical-align: middle;
-  font-size: 2.5vw;
+  font-size: 2em;
 }
 
 .request-card-buttons {
@@ -28,7 +28,7 @@
 .amenity-details {
   display: flex;
   margin-bottom: 8px;
-  font-size: 8vw;
+  font-size: 2em;
   align-items: center;
   img {
     height: 32px;
