--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -257,7 +257,7 @@
 
 .card-event-avatar-show {
   height: 100px;
-  width: 100px;
+  // width: 100px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
