--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@import url('https://unpkg.com/swiper/swiper-bundle.min.css');
+
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
