--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -195,12 +195,17 @@
   min-width: 300px;
   background-size: cover;
   width: 100%;
-  height: 150px;
+  height: 160px;
   margin: 0 auto;
   background-position: center;
   text-align: center;
   color: white;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .card-event-picture-show {
