--- a/app/views/users/_events.html.erb
+++ b/app/views/users/_events.html.erb
@@ -1,5 +1,5 @@
 <% if events.length.zero? %>
-  <div class="no-events-display h-100 d-flex flex-column justify-content-center align-items-center">
+  <div class="p-3 no-events-display d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
     <h3 class="font-green">No events to display!</h3>
     <p>Browse the "All Events" tab to see events others have created, or click "make an event" to organize your own!</p>
   </div>
